@@ -67,6 +67,14 @@ Gets a string containing the window title.
 See \helpref{wxTopLevelWindow::SetTitle}{wxtoplevelwindowsettitle}.
 
 
+\membersection{wxTopLevelWindow::IsActive}\label{wxtoplevelwindowisactive}
+
+\constfunc{bool}{IsActive}{\void}
+
+Returns \true if this window is currently active, i.e. if the user is currently
+working with it.
+
+
 \membersection{wxTopLevelWindow::Iconize}\label{wxtoplevelwindowiconize}
 
 \func{void}{Iconize}{\param{bool}{ iconize}}
